--- a/composer.json
+++ b/composer.json
@@ -20,19 +20,19 @@
     "require": {
         "php": "^8.2",
         "ext-fileinfo": "*",
-        "illuminate/contracts": "^10.47|^11.0",
+        "illuminate/contracts": "^10.47|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.14"
     },
     "require-dev": {
         "nunomaduro/collision": "^8.1",
-        "orchestra/testbench": "^9.2",
-        "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-faker": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "orchestra/testbench": "^9.2|^10.0",
+        "pestphp/pest": "^2.34|^3.0",
+        "pestphp/pest-plugin-faker": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
