--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "autoprefixer": "^10.4.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.20",
-        "postcss-nesting": "^10.1.10",
-        "tailwindcss": "^3.2.6",
-        "vite": "^4.0.0"
+        "@tailwindcss/vite": "^4.1.3",
+        "laravel-vite-plugin": "^1.0.5",
+        "tailwindcss": "^4.1.4",
+        "vite": "^5.4.9"
     }
 }
